#summary Changelog for all changes since the fork

= Changes =
== Version 0.9.2 ==
  * ImageCache now started as a service, it doesn't get killed anymore by the system
  * ImageCache accessible from CategoryList, FeedList and FeedHeadlineList
  * Added notification for running downloads, using a grey icon to indicate the difference

== Version 0.9.1 ==
  * New: Added possibility to send error-reports after a crash
  * New: Removed donators-limitations, everyone can use the ImageCache now
  * New: Added Exit-Button to error-dialog to allow completely exiting the app from the dialog
  * Refurbished the reset of preferences (Preferences -> Menu -> Reset)
  * blog.fefe.de now working (fixed relative links but I am unsure whether I have to use full path to article or just the domain-part. Ideas anyone?)
  * Cleanup of preferences
  * Minor bugfixes

== Version 0.9 ==
  * New: Added check for supported server-version on startup
  * New: Added check for saved crash-report and option to send report by mail
  * Minor changes in network-access, Requests are faster now

== Version 0.8.9 (1) ==
  * New: Added custom title-bar in Article-Display (can be disabled in preferences)
  * New: Added setting to change the display-order of all lists
  * New: Added long-press option to Category-View, showing list of all articles inside (Please note that updating all feeds in a category can take a while but it happens in background anyway)
  * Addressed connectivity problems (probably no more annoying "could not connect"-messages)
  * Small bugfixes
  
== Version 0.8.8 ==
  * Fixed Issue #49: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=49 ttrss-reader-fork closes on launch and with wrong password])
  * Fixed Issue #50: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=50 New Article unread are shown])
  * Fixed Issue #53: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=53 crashes with "mark all as read"])