@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ttrssreader"
     android:installLocation="auto"
-    android:versionName="0.9.1"
-    android:versionCode="912"
+    android:versionName="0.9.2"
+    android:versionCode="920"
 >
 
     <application
